[gd_scene load_steps=4 format=3 uid="uid://cbgvp8vobn2xb"]

[ext_resource type="Script" uid="uid://bou8jjxa50ivf" path="res://Scripts/mainRoom.gd" id="1_tcvbn"]
[ext_resource type="Texture2D" uid="uid://csejjyfsav3qi" path="res://Assets/mainRoom.png" id="2_ye0ij"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tcvbn"]
size = Vector2(132, 1346)

[node name="mainRoom" type="Node2D"]
script = ExtResource("1_tcvbn")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_ye0ij")

[node name="Button" type="Button" parent="."]
offset_left = 524.0
offset_top = 1341.0
offset_right = 670.0
offset_bottom = 1384.0
text = "Go to Hallway
"

[node name="mainDoorArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="mainDoorArea"]
position = Vector2(343, 760)
shape = SubResource("RectangleShape2D_tcvbn")

[node name="WindowArea" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="WindowArea"]
position = Vector2(2467, 495)
polygon = PackedVector2Array(42, -219, -24, -181, -25, 209, 44, 229)

[node name="MailboxArea" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MailboxArea"]
position = Vector2(111, 1343)
polygon = PackedVector2Array(-111, -128, -55, -163, 129, -10, 159, 116, -111, 113)

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="input_event" from="mainDoorArea" to="." method="_on_main_door_area_input_event"]
[connection signal="input_event" from="WindowArea" to="." method="_on_window_area_input_event"]
[connection signal="input_event" from="MailboxArea" to="." method="_on_mailbox_area_input_event"]
